--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -253,8 +253,8 @@
     <ClCompile Include="NewEngine\Render\RenderWindow.cpp" />
     <ClCompile Include="NewEngine\Render\RootSignature.cpp" />
     <ClCompile Include="NewEngine\Render\ScissorRectangle.cpp" />
-    <ClCompile Include="NewEngine\Render\ShaderObject.cpp" />
-    <ClCompile Include="NewEngine\Render\ShaderObjectManager.cpp" />
+    <ClCompile Include="NewEngine\Render\ShaderCompiler.cpp" />
+    <ClCompile Include="NewEngine\Render\ShaderCompilerManager.cpp" />
     <ClCompile Include="NewEngine\Render\Viewport.cpp" />
     <ClCompile Include="NewEngine\Object\Other\TextureManager.cpp" />
     <ClCompile Include="NewEngine\Sound\SoundManager.cpp" />
@@ -418,8 +418,8 @@
     <ClInclude Include="NewEngine\Render\RenderWindow.h" />
     <ClInclude Include="NewEngine\Render\RootSignature.h" />
     <ClInclude Include="NewEngine\Render\ScissorRectangle.h" />
-    <ClInclude Include="NewEngine\Render\ShaderObject.h" />
-    <ClInclude Include="NewEngine\Render\ShaderObjectManager.h" />
+    <ClInclude Include="NewEngine\Render\ShaderCompiler.h" />
+    <ClInclude Include="NewEngine\Render\ShaderCompilerManager.h" />
     <ClInclude Include="NewEngine\Render\VertexBufferData.h" />
     <ClInclude Include="NewEngine\Render\Viewport.h" />
     <ClInclude Include="NewEngine\Object\Other\TextureManager.h" />
