--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -801,8 +801,8 @@
     <ClCompile Include="Application\SourceCode\CreateManager.cpp">
       <Filter>Application\Source</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Util\Setting.cpp">
-      <Filter>NewEngine\Source\Util</Filter>
+    <ClCompile Include="NewEngine\Util\NewEngineSetting.cpp">
+      <Filter>NewEngine\Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1024,9 +1024,6 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Model\ObjModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Util\Enum.h">
-      <Filter>NewEngine\Header\Util</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\FbxModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
@@ -1310,8 +1307,11 @@
     <ClInclude Include="Application\SourceCode\CreateManager.h">
       <Filter>Application\Header</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Util\Setting.h">
-      <Filter>NewEngine\Header\Util</Filter>
+    <ClInclude Include="NewEngine\Util\NewEngineSetting.h">
+      <Filter>NewEngine\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Util\NewEngineEnum.h">
+      <Filter>NewEngine\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
