テクスチャにインターフェースを作成した

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="NewEngine\Object\2D\PostEffect.cpp" />
     <ClCompile Include="NewEngine\Object\2D\RenderTexture.cpp" />
     <ClCompile Include="NewEngine\Object\2D\Sprite.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Texture\DepthTexture.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture\ITexture.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Emitter.cpp" />
@@ -233,13 +234,14 @@
     <ClCompile Include="NewEngine\Object\Other\FbxModel.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Material.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Mesh.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\Model.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Model\Model.cpp" />
     <ClCompile Include="NewEngine\Object\Other\ModelManager.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Object3D.cpp" />
     <ClCompile Include="NewEngine\Object\3D\OutLineObj.cpp" />
     <ClCompile Include="NewEngine\Object\3D\SilhouetteObj.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\Texture.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Texture\Texture.cpp" />
     <ClCompile Include="NewEngine\Object\Other\TextureAnimeiton.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Texture\VolumeTexture.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\BufferResource.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\DepthBuffer.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp" />
@@ -384,6 +386,7 @@
     <ClInclude Include="NewEngine\Object\2D\PostEffect.h" />
     <ClInclude Include="NewEngine\Object\2D\RenderTexture.h" />
     <ClInclude Include="NewEngine\Object\2D\Sprite.h" />
+    <ClInclude Include="NewEngine\Object\Other\Texture\DepthTexture.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture\ITexture.h" />
     <ClInclude Include="NewEngine\Object\3D\Emitter.h" />
     <ClInclude Include="NewEngine\Object\3D\GPUEmitter.h" />
@@ -394,16 +397,17 @@
     <ClInclude Include="NewEngine\Object\Other\FbxModel.h" />
     <ClInclude Include="NewEngine\Object\Other\MaterialColor.h" />
     <ClInclude Include="NewEngine\Object\Other\TextureAnimeiton.h" />
-    <ClInclude Include="NewEngine\Object\Other\Texture.h" />
+    <ClInclude Include="NewEngine\Object\Other\Texture\Texture.h" />
     <ClInclude Include="NewEngine\Object\3D\Camera.h" />
     <ClInclude Include="NewEngine\Object\3D\Line.h" />
     <ClInclude Include="NewEngine\Object\Other\Material.h" />
     <ClInclude Include="NewEngine\Object\Other\Mesh.h" />
-    <ClInclude Include="NewEngine\Object\Other\Model.h" />
+    <ClInclude Include="NewEngine\Object\Other\Model\Model.h" />
     <ClInclude Include="NewEngine\Object\Other\ModelManager.h" />
     <ClInclude Include="NewEngine\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Object\3D\OutLineObj.h" />
     <ClInclude Include="NewEngine\Object\3D\SilhouetteObj.h" />
+    <ClInclude Include="NewEngine\Object\Other\Texture\VolumeTexture.h" />
     <ClInclude Include="NewEngine\Render\Buffer\BufferResource.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h" />
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBufferData.h" />
